<resources>
    <string name="app_name">AssistantBeekeeper</string>
    <string name="button1">Button</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="add_breeding">AddBreeding</string>
    <string name="textView">TextView</string>
    <string name="notsettext">NotSetText</string>
    <string name="set_time_button">Button</string>
    <string name="ustaw_date">Ustaw date</string>
    <string name="current_location">Bierzaca lokalizacja</string>
    <string name="todo1">TODO</string>
    <string name="text_location">Hrubieszow</string>
    <string name="todo">Cześciowe zachmmurzenie</string>
    <string name="describe_weather_icon">cześciowe zachmurzenie</string>
    <string name="current_temperature">30</string>
    <string name="temperature_symbol">C</string>
    <string name="wind_speed">Wiatr</string>
    <string name="POP">POP %</string>
    <string name="sensible_temperature">real temperature</string>
    <string name="wind_icon">wind_icon</string>
    <string name="rain_icon">rain_icon</string>
    <string name="thermometer_icon">thermometer_icon</string>
    <string name="unit_speed"> km/h</string>
    <string name="percent">%</string>
    <string name="weekday">pon</string>
    <string name="temperature_day">T_Day</string>
    <string name="temperature_night">T_Night</string>
    <string name="five_days_forecast_button">Prognoza na 5 dni</string>
    <string name="title_alert">Title</string>
    <string name="time_event_start">Czas start</string>
    <string name="time_event_end">Czas stop</string>
    <string name="description_events">Opis</string>
    <string name="RefreshItem">RefreshItem</string>
    <string name="item2">Item2</string>
    <string name="switch1">Switch</string>
    <string name="ogolne">ogolne</string>
    <string name="meteorologiczne">meteorologiczne</string>
    <string name="informacje_drogowe">informacje_drogowe</string>
    <string name="hydrologiczne">hydrologiczne</string>
</resources>
