<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh_id_item"
        android:checkable="false"
        android:icon="@drawable/ic_autorenew_white"
        android:title="@string/RefreshItem"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/item1"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_autorenew_white"
        android:title="@string/ogolne"
        android:visible="true"
        app:showAsAction="never|collapseActionView|withText" />

    <item
        android:id="@+id/item2"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_autorenew_white"
        android:title="@string/meteorologiczne"
        android:visible="true"
        app:showAsAction="never|collapseActionView|withText" />

    <item
        android:id="@+id/item3"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_autorenew_white"
        android:title="@string/hydrologiczne"
        android:visible="true"
        app:showAsAction="never|collapseActionView|withText" />

    <item
        android:id="@+id/item4"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_autorenew_white"
        android:title="@string/informacje_drogowe"
        android:visible="true"
        app:showAsAction="never|collapseActionView|withText" />


</menu>