<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1951A"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/breedingButton"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#E4FF9800"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Breeding" />

    <androidx.cardview.widget.CardView
        android:id="@+id/widget_weather"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/db1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="306dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/current_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_location"
                        android:textColor="#FFFF"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_location"
                        android:textColor="#B7FFFFFF"
                        android:textSize="16sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/icon_weather"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:contentDescription="@string/describe_weather_icon"
                        android:src="@drawable/iconfinder" />

                    <TextView
                        android:id="@+id/describe_weather_Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="39dp"
                        android:layout_gravity="center"
                        android:text="@string/describe_weather_icon"
                        android:textColor="#B7FFFFFF"
                        android:textSize="14sp">

                    </TextView>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/current_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_temperature"
                            android:textColor="#FFFFFF"
                            android:textSize="37sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature_symbol"
                            android:textColor="#FFFFFF"
                            android:textSize="35sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/five_days_forecast_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:text="@string/five_days_forecast_button"
                            android:textColor="#95FAFAF8" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="88dp"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="89dp"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/wind_icon"
                                android:src="@drawable/wind_icon" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/wind_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:text="@string/wind_speed"
                                android:textColor="#FFFF"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="57dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:text="@string/unit_speed"
                                android:textColor="#FFFF"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="88dp"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/rain_icon"
                            android:src="@drawable/iconfinder_rain_icon" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/POP"
                                android:layout_width="47dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:text="@string/POP"
                                android:textColor="#FFFF"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="53dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:text="@string/percent"
                                android:textColor="#FFFF"
                                android:textSize="25sp" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="88dp"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/thermometer_icon"
                            android:src="@drawable/thermometer" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/sensible_temperature"
                                android:layout_width="48dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:text="@string/sensible_temperature"
                                android:textColor="#FFFF"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="53dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:text="@string/temperature_symbol"
                                android:textColor="#FFFF"
                                android:textSize="25sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>







