<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/db1">

            <TextView
                android:id="@+id/title_alert"
                android:layout_width="197dp"
                android:layout_height="51dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:text="@string/title_alert"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/time_event_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_event_start"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/time_event_start"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/time_event_end"
                app:layout_constraintStart_toEndOf="@+id/title_alert"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_event_end"
                android:layout_width="64dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/time_event_end"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_event_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_events"
                android:layout_width="321dp"
                android:layout_height="79dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/description_events"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
